--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ openai = ">=1.93.0,<2.0.0"
 qdrant-client = ">=1.9.0,<2.0.0"
 llama-index-vector-stores-qdrant = "*"
 langchain = ">=0.3.26,<0.4.0"
+llama-index-llms-azure-openai = "*"
+llama-index-embeddings-azure-openai = "*"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
